third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/bug_10991a.exp
module 0x42::Test {
    fun foo(f: |(u64, u64)|(u64), g: |(u64, u64)|(u64), h: |(u64, u64)|(u64), i: |(u64, u64)|(u64), x: u64, y: u64): u64 {
        f(x, y) + g(x, y) + h(x, y) + i(x, y)
    }
    public fun test() {
        if (!(foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), |(arg0,arg1)| __lambda__2__test(arg0, arg1), |(arg0,arg1)| __lambda__3__test(arg0, arg1), |(arg0,arg1)| __lambda__4__test(arg0, arg1), 10, 100) == 220)) abort 0;
    }
    fun __lambda__1__test(x: u64, param$1: u64): u64 {
        x
    }
    fun __lambda__2__test(param$0: u64, y: u64): u64 {
        y
    }
    fun __lambda__3__test(a: u64, _b: u64): u64 {
        a
    }
    fun __lambda__4__test(_c: u64, d: u64): u64 {
        d
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ bug_10991a.move:6:20
  │
6 │         if (!(foo(|(arg0,arg1)| __lambda__1__test(arg0, arg1), |(arg0,arg1)| __lambda__2__test(arg0, arg1), |(arg0,arg1)| __lambda__3__test(arg0, arg1), |(arg0,arg1)| __lambda__4__test(arg0, arg1), 10, 100) == 220)) abort 0;
  │                    ^
  │                    │
  │                    Unexpected '('
  │                    Expected a variable or struct or variant name
